[package]
name = "obs-client"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
base64 = "0.22.1"
cookie_store = "0.21.0"
reqwest = { version = "0.12.7", features = ["json"] }
reqwest_cookie_store = "0.8.0"
ssh-key = "0.6.6"
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.3", features = ["sync"] }
url = "2.5.2"
xdg = "2.5.2"
yaserde = { version = "0.10.1", features = ["yaserde_derive"] }
