[package]
name = "obs-smart-release"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
itertools = "0.13.0"
obs-client = { version = "0.1.0", path = "../obs-client" }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["rt", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
