[package]
name = "obs-smart-request"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
itertools = "0.13.0"
obs-client = { version = "0.1.0", path = "../obs-client" }
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
